--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -106,3 +106,16 @@ repos:
                 - requirements.txt
                 - --header
                 - "# generated from manifests external_dependencies"
+    - repo: https://github.com/OCA/maintainer-tools
+      rev: master
+      hooks:
+          - id: oca-gen-addon-readme
+            args:
+                - --repo-name
+                - cb-medical
+                - --org-name
+                - tegin
+                - --branch
+                - "13.0"
+                - --addons-dir
+                - .
