--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,16 +44,10 @@ jobs:
                   git+https://github.com/forgeflow/multicompany-fixes.git@13.0#subdirectory=setup
             - run:
                   pip install
+                  git+https://github.com/tegin/archive-management.git@13.0#subdirectory=setup
+            - run:
+                  pip install
                   git+https://github.com/tegin/medical-fhir.git@13.0#subdirectory=setup
-            - run:
-                  pip install
-                  git+https://github.com/OCA/report-print-send.git@refs/pull/251/merge#subdirectory=setup/remote_report_to_printer
-            - run:
-                  pip install
-                  git+https://github.com/OCA/pos.git@refs/pull/674/merge#subdirectory=setup/pos_session_pay_invoice
-            - run:
-                  pip install
-                  git+https://github.com/OCA/commission.git@refs/pull/311/merge#subdirectory=setup/sale_commission_delegated_partner
             - run:
                   pip install
                   git+https://github.com/tegin/cb-addons.git@13.0#subdirectory=setup
